--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-tester-six",
+  "name": "google-cloudfunction-callfromreactapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
