--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
-[build]
-  functions = "functions"
+[functions]
+  directory = "functions/"
 
 [context.dev.environment]
   GREETING_TEST = "Hello Development"
